--- a/Project.toml
+++ b/Project.toml
@@ -5,4 +5,5 @@ version = "0.1.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
